src/k8s/demo-flux/apps/base/calculator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator-deployment
  namespace: calculator
  labels:
    app: calculator
spec:
  replicas: 2
  selector:
    matchLabels:
      app: calculator
  template:
    metadata:
      labels:
        app: calculator
    spec:
      containers:
      - name: go-calculator
        image: syafdia/go-calculator:latest
        ports:
        - containerPort: 8080
