src/k8s/demo-flux/apps/base/calculator/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: calculator-service
  namespace: calculator
spec:
  selector:
    app: calculator
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
