src/k8s/demo-flux/apps/base/calculator/virtualService.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: calculator-vs
  namespace: calculator
spec:
  virtualHost:
    domains:
    - calculator.service.local
    options:
      extauth:
        customAuth: {}
    routes:
    - matchers:
      - prefix: /
      delegateAction:
        ref:
          name: calculator-deployment
          namespace: calculator
